försöker igen med _redirects efter lärarens rekommendationer

--- a/angular.json
+++ b/angular.json
@@ -82,7 +82,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "netlify.toml"
+              "src/_redirects"
             ],
             "styles": [
              
